fix(about): Prevent image overflow in About section

--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -1,5 +1,7 @@
 @import "../../assets/styles/variables.scss";
 .about-wrapper{
+    font-family: "Overpass", sans-serif;
+    line-height: 2rem;
     position: relative;
       display: flex;
       flex-direction: column;
@@ -26,6 +28,7 @@
         color: $blue-600;
         font-weight: 400;
         text-align: left;
+        margin-bottom: 2rem;
         @media screen and (max-width: 768px){
             text-align: center;
             font-size: 1.4rem;
